--- a/portfolio-vol-4/package.json
+++ b/portfolio-vol-4/package.json
@@ -14,7 +14,8 @@
     "heroicons": "^2.2.0",
     "next": "15.4.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
